# Neander-Compiler-Stack

./: .gitignore  .ignore  Cargo.toml  README.md  build.zig  build.zig.zon
.github/workflows/: release.yml
calc/src/: main.zig
src/: assembler.rs  bnf.rs  interpreter.rs  lib.rs
src/assembler/: codegen.rs  lexer.rs  mod.rs  parser.rs
src/calc/: codegen.rs  lexer.rs  parser.rs
src/interpreter/: interpreter.rs
utils/: asm.txt  grammar.txt
