[package]
name = "neander_compiler_stack"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "interpreter"
path = "src/interpreter.rs"

[[bin]]
name = "assembler"
path = "src/assembler.rs"

[[bin]]
name = "bnf"
path = "src/bnf.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
bnf = "0.6"
